# benchmark_contacts

./: Makefile  README.md  docker-compose.yml
benchmark_client/: Dockerfile  benchmark.go  go.mod  go.sum
benchmark_tests/: Dockerfile  requirements.txt  test_api.py
c_microhttpd/: Dockerfile
c_microhttpd/app/: main.c
cpp_crow/: Dockerfile
cpp_crow/app/: CMakeLists.txt  connection_pool.hpp  main.cpp
cpp_drogon/: CMakeLists.txt  Dockerfile
cpp_drogon/app/: ContactController.cc  ContactController.cpp  ContactController.h  main.cpp
go/app/: main.go
go_fiber/: Dockerfile
go_fiber/app/: go.mod  go.sum  main.go
java_spring/: Dockerfile
java_spring/app/: Contact.java  ContactController.java  ContactRepository.java  application.properties  pom.xml
node_express/: Dockerfile
node_express/app/: index.js  package.json
php_slim/: Dockerfile
php_slim/app/: .rr.yaml  composer.json  index.php  worker.php
postgresql/: schema.sql
python_aiohttp/: Dockerfile  requirements.txt
python_aiohttp/app/: db.py  main.py  models.py  routes.py
rust_actix/: Dockerfile
rust_actix/app/: .env  Cargo.toml  cargo.toml
rust_actix/app/src/: main.rs  schema.rs
rust_axum/: Dockerfile  README.md
rust_axum/app/: Cargo.toml
rust_axum/app/.sqlx/: query-5ba6b4bf8e9c88f473dc439e78a55399b249556b180ca517abd03b398cd44e4d.json
rust_axum/app/src/: main.rs  schema.rs
