[package]
name = "rust_axum"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
opt-level = 3
incremental = false

[dependencies]
axum = "0.7"
num_cpus = "1.16"
backtrace = "0.3"
tokio = { version = "1.37", features = ["full"] }
diesel = { version = "2.1", features = ["postgres", "chrono", "uuid"] }
diesel-async = { version = "0.3", features = ["bb8", "postgres"] }
bb8 = "0.9"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.8", features = ["serde", "v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
tower-http = { version = "0.5", features = ["trace"] }
