[package]
name = "rust_axum"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
opt-level = 3
incremental = false

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tower-http = { version = "0.5", features = ["trace"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
num_cpus = "1"
