[package]
name = "rust_axum"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
opt-level = 3
incremental = false

[dependencies]
anyhow = "1.0"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
mimalloc = "0.1"
num_cpus = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "macros", "chrono"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace"] }
uuid = { version = "1", features = ["serde", "v4"] }
